// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityFeedPagination renders default pagination 1`] = `
<div
  className="sc-cmthru dhFBXA"
>
  <div
    className="sc-eqIVtm fxHPMe"
  >
    <div
      className="sc-fAjcbJ fsjQAG"
    >
      <svg
        className="icon-loading"
        fill="#0b0c0c"
        height="50px"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "display": "block",
          }
        }
        version="1.1"
        viewBox="-25 -25 50 50"
        width="50px"
      >
        <title>
          Loading
        </title>
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "0ms",
            }
          }
          transform="rotate(0, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "83ms",
            }
          }
          transform="rotate(30, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "166ms",
            }
          }
          transform="rotate(60, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "249ms",
            }
          }
          transform="rotate(90, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "332ms",
            }
          }
          transform="rotate(120, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "415ms",
            }
          }
          transform="rotate(150, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "498ms",
            }
          }
          transform="rotate(180, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "581ms",
            }
          }
          transform="rotate(210, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "664ms",
            }
          }
          transform="rotate(240, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "747ms",
            }
          }
          transform="rotate(270, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "830ms",
            }
          }
          transform="rotate(300, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "913ms",
            }
          }
          transform="rotate(330, 0, 2) translate(10 0)"
          width="12"
        />
      </svg>
      <div
        className="overlay sc-caSCKo cQyEyL"
      />
    </div>
    <button
      className="sc-VigVT kJjasd"
      disabled={false}
      onClick={[Function]}
    >
      Show more activity
    </button>
  </div>
</div>
`;

exports[`ActivityFeedPagination renders pagination with loader 1`] = `
<div
  className="sc-cmthru dhFBXA"
>
  <div
    className="sc-eqIVtm fxHPMe"
  >
    <div
      className="sc-fAjcbJ fsjQAG"
    >
      <svg
        className="icon-loading"
        fill="#0b0c0c"
        height="50px"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "display": "block",
          }
        }
        version="1.1"
        viewBox="-25 -25 50 50"
        width="50px"
      >
        <title>
          Loading
        </title>
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "0ms",
            }
          }
          transform="rotate(0, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "83ms",
            }
          }
          transform="rotate(30, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "166ms",
            }
          }
          transform="rotate(60, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "249ms",
            }
          }
          transform="rotate(90, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "332ms",
            }
          }
          transform="rotate(120, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "415ms",
            }
          }
          transform="rotate(150, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "498ms",
            }
          }
          transform="rotate(180, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "581ms",
            }
          }
          transform="rotate(210, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "664ms",
            }
          }
          transform="rotate(240, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "747ms",
            }
          }
          transform="rotate(270, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "830ms",
            }
          }
          transform="rotate(300, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "913ms",
            }
          }
          transform="rotate(330, 0, 2) translate(10 0)"
          width="12"
        />
      </svg>
      <div
        className="overlay sc-caSCKo cQyEyL"
      />
    </div>
    <button
      className="sc-VigVT kJjasd"
      disabled={true}
      onClick={[Function]}
    >
      Show more activity
    </button>
  </div>
</div>
`;

exports[`ActivityFeedPagination renders pagination with loader 2`] = `
<div
  className="sc-cmthru dhFBXA"
>
  <div
    className="sc-eqIVtm fxHPMe"
  >
    <div
      className="sc-fAjcbJ fsjQAG"
    >
      <svg
        className="icon-loading"
        fill="#0b0c0c"
        height="50px"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "display": "block",
          }
        }
        version="1.1"
        viewBox="-25 -25 50 50"
        width="50px"
      >
        <title>
          Loading
        </title>
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "0ms",
            }
          }
          transform="rotate(0, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "83ms",
            }
          }
          transform="rotate(30, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "166ms",
            }
          }
          transform="rotate(60, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "249ms",
            }
          }
          transform="rotate(90, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "332ms",
            }
          }
          transform="rotate(120, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "415ms",
            }
          }
          transform="rotate(150, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "498ms",
            }
          }
          transform="rotate(180, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "581ms",
            }
          }
          transform="rotate(210, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "664ms",
            }
          }
          transform="rotate(240, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "747ms",
            }
          }
          transform="rotate(270, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "830ms",
            }
          }
          transform="rotate(300, 0, 2) translate(10 0)"
          width="12"
        />
        <rect
          className="Spinner__Rect-sc-1pm4zwa-0 glkcMw"
          fill="#0b0c0c"
          height="5"
          opacity="0"
          rx="2.5"
          ry="2.5"
          style={
            Object {
              "animationDelay": "913ms",
            }
          }
          transform="rotate(330, 0, 2) translate(10 0)"
          width="12"
        />
      </svg>
      <div
        className="overlay sc-caSCKo cQyEyL"
      />
    </div>
    <button
      className="sc-VigVT kJjasd"
      disabled={true}
      onClick={[Function]}
    >
      Show more activity
    </button>
  </div>
</div>
`;
